**  denotes quite substantial/important changes
*** denotes really big changes 

1.8-5

* mgcv_qrqy was not thread safe. Not noticeable on many platforms as all 
  threads did exactly the same thing to the same matrix, but very noticeable
  on Windows. Thread safe mgcv_qrqy0 added and used in any parallel sections.

* Allow openMP support if compiler supports it and provides pre-defined macro 
  _OPENMP, even if SUPPORT_OPENMP undefined. (Allows multi-threading on 
   Windows, for example.) 

* 'eps' is now an argument to 'betar' allowing some control on how to 
  handle response values too close to 0 or 1. Help file expanded to 
  emphasise the problems with using beta regression with 0s and 1s in 
  the data.

* fix of bug in multi-formula contrast handling, causing failure of prediction
  in some  cases.

* ziP and ziplss now check for non-integer (or binary) responses and produce
  an error message if these are found. Previously this was not trapped and
  could lead to a segfault. 

1.8-4

** JAGS/BUGS support added, enabling auto-generation of code and data
  required to used mgcv type GAMs with JAGS. Useful for complex random 
  effects structures, for example.

* smoothCon failed if selection penalties requested, but term was unpenalized.
  Now fixed (no selection penalties on unpenalized terms.)
  
* gam.check would fail for tensor product smooths with by variables - fixed.

* predict.gam would fail when predicting for more data than the blocksize
  but selecting only some terms. Fixed thanks to Scott Kostyshak.

* smoothCon now has an argument `diagonal.penalty' allowing single penalty 
  smooths to be re-parameterized in order to diagonalize the penalty matrix.
  PredictMat is modified to apply the same reparameterization, making it
  user transparent. Facilitates the setup of smooths for export to other 
  packages.

* predict.bam now exported in response to a request from another 
  package maintainer.
